<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.abdurakhmonoff.covidhelper.ui.main.MainFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_statsFragment"
            app:destination="@id/statsFragment" />
        <action
            android:id="@+id/action_mainFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
        <action
            android:id="@+id/action_mainFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/statsFragment"
        android:name="com.abdurakhmonoff.covidhelper.ui.stats.StatsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_stats" />
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.abdurakhmonoff.covidhelper.ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.abdurakhmonoff.covidhelper.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>
</navigation>