<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.abdurakhmonoff.covidhelper.ui.main.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:padding="16dp"
            tools:context=".ui.main.MainFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/covid_stat_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@string/covid_19"
                        android:scaleType="centerCrop"
                        android:src="@drawable/covid"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/total_cases_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@{String.valueOf(viewModel.totalStats.cases)}"
                        android:textSize="25sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/total_cases_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/total_cases_label"
                        tools:text="110 032 334" />

                    <TextView
                        android:id="@+id/total_cases_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/total_cases_two_dot"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toStartOf="@+id/total_cases_number"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />

                    <TextView
                        android:id="@+id/total_deaths_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/deaths_two_dot"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toStartOf="@+id/total_deaths_number"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/total_cases_label" />

                    <TextView
                        android:id="@+id/total_deaths_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@{String.valueOf(viewModel.totalStats.deaths)}"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/total_deaths_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/total_deaths_label"
                        tools:text="2 429 707" />

                    <TextView
                        android:id="@+id/total_recovered_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/recovered"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/total_recovered_number"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/total_deaths_label" />

                    <TextView
                        android:id="@+id/total_recovered_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@{String.valueOf(viewModel.totalStats.recovered)}"
                        android:textColor="#4CAF50"
                        android:textSize="25sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/total_recovered_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/total_recovered_label"
                        tools:text="84 848 131" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/button_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/covid_stat_container">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view_covid_stats_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/view_stats_img_main"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:contentDescription="@string/view_covid_stats_text"
                            android:padding="10dp"
                            android:src="@drawable/stats_icon" />

                        <TextView
                            android:id="@+id/view_stats_txt_main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="8dp"
                            android:text="@string/view_covid_stats_text"
                            android:textSize="22sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/learn_covid_symptoms_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/covid_symptoms_img_main"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:contentDescription="@string/learn_covid_symptoms_text"
                            android:padding="10dp"
                            android:src="@drawable/coronavirus_symptoms" />

                        <TextView
                            android:id="@+id/learn_covid_symptoms_text_main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="8dp"
                            android:text="@string/learn_covid_symptoms_text"
                            android:textSize="22sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/learn_more_covid_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/learn_more_covid_img_main"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:contentDescription="@string/learn_more_about_covid"
                            android:padding="10dp"
                            android:src="@drawable/coronavirus_info_img" />

                        <TextView
                            android:id="@+id/learn_more_covid_txt_main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="8dp"
                            android:text="@string/learn_more_about_covid"
                            android:textSize="22sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>